# distanceTester

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/: CMakeLists.txt  framework_config.h  platform_esp32.h
components/module/include/: coil.h  display.h  io_module.h  motor.h  rotary.h
components/module/source/: DJI_motor.c  coil.c  display.c  io_module.c  rotary.c
main/: CMakeLists.txt  board.c  bus_device_manage.c  bus_device_manage.h  control_manage.c  control_manage.h  main.c  monitor.c  monitor.h  motor_manage.c  motor_manage.h  sys_event.c  sys_event.h  sys_event_type.h  test.c
main/config/: board_distance_test.h  config.h  export_ids.h
